--- a/anvil.yaml
+++ b/anvil.yaml
@@ -158,7 +158,7 @@ db_schema:
     server: full
     title: Users
 dependencies: []
-name: Clone of Ticketing System (2)
+name: Anvil-template-ticketing-system
 native_deps:
   head_html: |-
     <link rel="stylesheet" href="_/theme/styles/app.css"/>
